--- a/CódigoFuente/BitacorasProduccion/Views/BG_IHS_division/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_IHS_division/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<Portal_2_0.Models.BG_IHS_combinacion>
+﻿@model IEnumerable<Portal_2_0.Models.BG_IHS_division>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Listado de Combinaciones de IHS";
+    ViewBag.Title = "Listado de Divisiones de IHS";
     ViewBag.PrimerNivel = "budget_ihs";
-    ViewBag.SegundoNivel = "BG_IHS_combinacion";
-    ViewBag.ControllerName = "BG_IHS_combinacion";
+    ViewBag.SegundoNivel = "BG_IHS_division";
+    ViewBag.ControllerName = "BG_IHS_division";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
 
@@ -32,7 +32,6 @@
     <input type="hidden" value="@mensajeAlerta.Mensaje" id="mensajeAlert" />
     <input type="hidden" value="@mensajeAlerta.getTipoMensaje()" id="mensajeAlertTipo" />
 }
-
 
 <div class="right_col" role="main">
     <div class="">
@@ -61,18 +60,20 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="card-box">
+
                                     <div class="form-group">
                                         @using (Html.BeginForm(null, null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left" }))
                                         {
                                             <div class="form-group row ">
-                                                <label class="control-label col-md-1 col-sm-1" for="id" style="text-align:right">Combinaci&oacute;n:</label>
+                                                <label class="control-label col-md-1 col-sm-1" for="id_ihs_item" style="text-align:right">Elemento IHS:</label>
                                                 <div class="col-md-8 col-sm-8">
-                                                    @Html.DropDownList("id", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                    @Html.DropDownList("id_ihs_item", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                 </div>
                                             </div>
                                         }
                                         <hr />
                                     </div>
+
                                     <div class="form-group">
                                         <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
                                             <i class="fa fa-plus-square"></i>
@@ -87,28 +88,16 @@
                                                     @Html.DisplayNameFor(model => model.id)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.vehicle)
+                                                    @Html.DisplayNameFor(model => model.id_ihs_item)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.production_brand)
+                                                    @Html.DisplayNameFor(model => model.ElementosEnDivision)
                                                 </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.production_plant)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.manufacturer_group)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.sop_start_of_production)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.eop_end_of_production)
+                                                 <th>
+                                                    @Html.DisplayNameFor(model => model.porcentaje_scrap)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.comentario)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.porcentaje_scrap)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
@@ -143,29 +132,17 @@
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.id)
                                                     </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.vehicle)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.production_brand)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.production_plant)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.manufacturer_group)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.sop_start_of_production)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.eop_end_of_production)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.comentario)
+                                                    <td nowrap>
+                                                        @Html.DisplayFor(modelItem => item.BG_IHS_item.ConcatCodigo)
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.porcentaje_scrap)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.ElementosEnDivision)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.comentario)
                                                     </td>
                                                     <td>
                                                         @(item.activo?"Activo":"Inactivo")
@@ -237,3 +214,5 @@
     </script>
 
 }
+
+
